--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
           <div class="logo-details">
             <span class="logo_name">company</span>
           </div>
-          <div class="media-icons">
+          <div class="media-icons" style="display:flex;>
             <span class="fa fa-facebook"></span>
             <span class="fa fa-twitter"></span>
             <span class="fa fa-instagram"></span>
@@ -27,7 +27,7 @@
             <span class="fa fa-youtube"></span>
           </div>
         </div>
-        <div class="link-boxes">
+        <div class="link-boxes" style="display:flex;">
             <div class="nav-links">
                 <div class="page-heading">
                     <h2>Links</h2>
@@ -73,7 +73,7 @@
             </div>
         </div>
       </div>
-      <div class="bottom-details">
+      <div class="bottom-details" style="display:flex;">
         <span>Copyright &copy 2021 company.</span>
         <span>Privacy policy</span>
       </div>
