--- a/main.html
+++ b/main.html
@@ -19,14 +19,14 @@
           <div class="logo-details">
             <span class="logo_name">company</span>
           </div>
-          <div class="media-icons" style="display:flex;>
-            <span class="fa fa-facebook"></span>
-            <span class="fa fa-twitter"></span>
-            <span class="fa fa-instagram"></span>
-            <span class="fa fa-linkedin"></span>
-            <span class="fa fa-youtube"></span>
-          </div>
-        </div>
+          <div class="media-icons" style="display:flex;">
+			<a href="#"><span class="fa fa-facebook"></span></a>
+			<a href="#"><span class="fa fa-twitter"></span></a>
+			<a href="#"><span class="fa fa-instagram"></span></a>
+			<a href="#"><span class="fa fa-linkedin"></span></a>
+			<a href="#"><span class="fa fa-youtube"></span></a>
+	     </div>
+		</div>
         <div class="link-boxes" style="display:flex;">
             <div class="nav-links">
                 <div class="page-heading">
